fix the display of the app on mobile-device

--- a/css/tooplate-style.css
+++ b/css/tooplate-style.css
@@ -527,7 +527,7 @@ dark-mode h5,
   }
 
   .navbar-collapse {
-    background: #ffffff;
+    background: #0a192f;
     text-align: center;
     padding-bottom: 20px;
   }
